# stanfordkarel

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CheckerboardKarel.py  CollectNewspaperKarel.py  ExtensionKarel.py  Karel_TK.txt  LICENSE  MANIFEST.in  MidpointKarel.py  README.md  TripleKarel.py  WorldEditor.py  WorldEditorApplication.py  autograde  autograder  collect_newspaper_karel.py  conftest.py  create_sol_world.py  main.py  manual.py  pyproject.toml  requirements-dev.txt  ruff.toml  setup.cfg  setup.py  stone_mason_karel.py  util.py  world_editor.py
.github/workflows/: test.yml
examples/: CheckerboardKarel.py  CollectNewspaperKarel.py  TestKarel.py
karel/: Karel.py  KarelApplication.py  KarelCanvas.py  KarelWorld.py  SuperKarel.py  colors.py  execute_karel.py  kareldefinitions.py  stanfordkarel.py
problems/: checkerboard_karel.py  collect_newspaper_karel.py  extension_karel.py  garden_karel.py  manual.py  midpoint_karel.py  square_karel.py  stone_mason_karel.py  triple_karel.py
scripts/: pre-push  run-tests  run-tests.bash
stanfordkarel/: Karel.py  KarelApplication.py  KarelCanvas.py  KarelWorld.py  __init__.py  didyoumean.py  karel.py  karel_application.py  karel_ascii.py  karel_canvas.py  karel_constants.py  karel_definitions.py  karel_executor.py  karel_image_renderer.py  karel_program.py  karel_qt_application.py  karel_renderer.py  karel_world.py  kareldefinitions.py  stanfordkarel.py  student_code.py  style_checker.py  world_editor.py
stanfordkarel/worlds/: 1x1.w  2x2.w  2x8.w  5x3.w  5x5.w  8x1.w  8x2.w  8x8.w  collect_newspaper_karel.w  gg.w  midpoint_finding_karel.w  midpoint_karel_end.w  square_karel.w
tests/: ascii_karel_test.py  autograde_test.py  conftest.py  exceptions_test.py  functionality_test.py  karel_world_test.py  sample_test.py  style_test.py  util.py  worlds_file_test.py
tests/exception_programs/: indent_error.txt  missing_main.txt  name_error.txt  syntax_error.txt
tests/programs/: empty_beeper.txt  empty_color.txt  error_1.py
tests/student_folder/: checkerboard_karel.py
tests/student_folder_no_worlds/: checkerboard.py  karl.py
worlds/: 1x1.w  1x8.w  3x5.w  6x5.w  7x7.w  8x1.w  8x8.w  CheckerboardKarelEnd.w  CollectNewspaperKarel.w  DefaultWorld.w  MidpointFindingKarel.w  MidpointKarel.w  SampleQuad2.w  StoneMasonKarel.w  StoneMasonKarelEnd.w  Triple1.w  Triple2.w  Triple3.w  TripleKarelEnd.w  collect_newspaper_karel_end.w  color_karel.w  extension_karel.w  hospital_karel.w  oops.w  sample_quad1.w  test.w  triple_karel.w
