[metadata]
name = stanfordkarel
version = 0.2.3
description = Official Stanford Karel library used in CS 106A
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tyleryep/stanford-karel
author = Tyler Yep
author_email = tyep10@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = stanfordkarel
python_requires = >=3.6
include_package_data = True

[mypy]
strict = True
ignore_missing_imports = True
allow_untyped_calls = True

[mypy-problems.*]
ignore_errors = True

[mypy-solutions.*]
ignore_errors = True

[pylint.MESSAGES CONTROL]
disable =
    unnecessary-pass,
    pointless-string-statement,
    too-many-arguments,
    missing-docstring,
    arguments-differ,
    duplicate-code,
    too-many-locals,
    too-many-instance-attributes,
    unused-wildcard-import,
    wildcard-import,
    attribute-defined-outside-init,
    too-many-public-methods,
    too-many-ancestors,
    invalid-name,
    protected-access,
    broad-except,
    fixme,
    inherit-non-class,
    too-few-public-methods,


[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203,F401,F403,F405
