[metadata]
name = stanfordkarel
version = 0.2.5
description = Official Stanford Karel library used in CS 106A
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tyleryep/stanford-karel
author = Tyler Yep
author_email = tyep@cs.stanford.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = stanfordkarel
python_requires = >=3.7
include_package_data = True

[mypy]
strict = True
ignore_missing_imports = True
allow_untyped_calls = True
warn_unused_configs = True

[mypy-problems.*]
ignore_errors = True

[mypy-solutions.*]
ignore_errors = True

[pylint.MASTER]
load-plugins = pylint_strict_informational

[pylint.MESSAGES CONTROL]
enable =
    useless-suppression,
    deprecated-pragma,
    use-symbolic-message-instead,
disable =
    missing-docstring,
    too-many-arguments,
    too-many-locals,
    too-many-instance-attributes,
    too-few-public-methods,
    too-many-public-methods,
    too-many-ancestors,
    unused-wildcard-import,
    wildcard-import,
    attribute-defined-outside-init,
    duplicate-code,
    invalid-name,
    protected-access,
    fixme,

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203,F401,F403,F405
