[metadata]
name = stanfordkarel
version = 0.2.7
description = Official Stanford Karel library used in CS 106A
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tyleryep/stanford-karel
author = Tyler Yep
author_email = tyep@cs.stanford.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = stanfordkarel
python_requires = >=3.7
include_package_data = True

[options.package_data]
stanfordkarel = py.typed

[mypy]
strict = True
warn_unreachable = True
disallow_any_unimported = True
extra_checks = True
enable_error_code = ignore-without-code

[mypy-problems.*]
ignore_errors = True

[mypy-solutions.*]
ignore_errors = True

[mypy-tests.programs.*]
ignore_errors = True
